[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "seriesdb"
version = "0.11.0"

[dependencies]
ahash = "0.8.11"
byteorder = "1.5.0"
bytes = "1.6.1"
chrono = "0.4.38"
concurrent-initializer = {git = "https://github.com/xuchaoqian/concurrent-initializer-rust.git", branch = "main"}
log = "0.4.22"
prost = "0.13.1"
quick_cache = "0.6.2"
rocksdb = {git = "https://github.com/xuchaoqian/rust-rocksdb.git", branch = "more-apis-for-writebatch-handler", features = [
  "multi-threaded-cf",
]}
thiserror = "1.0.63"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
harness = false
name = "seriesdb_bench"
